# Football-Dynamic-Knowledge

./: .env.example  .gitignore  DATA_OBJECT_ALIGNMENT_EXPLANATION.md  Dockerfile  PROJECT_ARCHITECTURE.md  PROJECT_ARCHITECTURE_THESIS.md  README.md  REORGANIZATION.md  debug_chunker.py  docker-compose.yaml  pyproject.toml  quick_test.py  requirements.txt  test_case1_debug.py  test_fresh.py  test_v2.py
api/: __init__.py  dependencies.py  main.py
configs/: dev.yaml
core/: config.py  logging.py
datasource/: README.md  SKILL.md  __init__.py  crawler.py  news_repository.py  preprocess_adapter.py  service.py
docker/: entrypoint.sh
embeddings/: embedding_service.py
extractor/: README.md  demo_fact_type.py  entity_extractor.py  event_candidate_extractor.py  integration_test.py  ner.py  test_entity_extractor_v2.py  test_extract_event_candidates.py  test_extract_time_expressions.py  test_fact_type.py  test_layer1_syntax_first.py  test_layer2_dictionary.py  test_layer3.py  test_temporal_pipeline.py  test_time_expression.py  time_expression_extractor.py
extractor_v1/: IMPROVEMENT_PLAN.md  PROMPT_OPTIMIZATION.md  README_ANCHOR_EXTRACTION.md  __init__.py  anchor_extractor.py  event_decomposition.py  example_usage.py  integrate_test_extractor.py  ollama_backend.py  test_anchor_extraction.py  test_event_decomposition.py
feedback/: feedback_service.py
knowledge_graph/: README.md  __init__.py  config.py  example_usage.py  load_to_neo4j.py  neo4j_reader.py  neo4j_service.py  neo4j_writer.py
preprocess/: README.md  __init__.py  cleaner.py  contracts.py  integration_test.py  (+1 more)
(+72 files in other folders)
