[tool.poetry]
name = "football-knowledge-crawler"
version = "0.1.0"
description = "动态大模型知识库系统（面向足球爱好者）"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
neo4j = "^5.16.0"
redis = "^5.0.1"
celery = "^5.3.6"
httpx = "^0.26.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
numpy = "^1.26.3"
sentence-transformers = "^2.3.1"
langchain = "^0.1.0"
openai = "^1.10.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.14"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
